--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "nyc --reporter=html mocha && xdg-open ./coverage/index.html"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^8.1.0",
     "node-fetch": "^2.6.0",
