--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mws-sdk",
+  "name": "mws-client",
   "version": "0.0.1",
   "description": "an api wrapper for Amazon Marketplace Webservice API",
   "main": "index.js",
