--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "an api wrapper for Amazon Marketplace Webservice API",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=lcov mocha",
+    "test": "node ./scripts/test.js",
     "lint": "standard --fix",
-    "coverage": "nyc --reporter=html mocha && xdg-open ./coverage/index.html",
+    "coverage": "node ./scripts/coverage.js",
     "add-section": "node tools/section-generator.js"
   },
   "author": "",
