Hotfix: updated environment variables

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Test
       run: npm run test
       env:
-        AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        SELLER_ID: ${{ secrets.SELLER_ID }}
-        MWS_AUTH_TOKEN: ${{ secrets.MWS_AUTH_TOKEN }}
+        MWS_KEY_ID: ${{ secrets.MWS_KEY_ID }}
+        MWS_KEY_SECRET: ${{ secrets.MWS_KEY_SECRET }}
+        AMZ_EU_SELLER_ID: ${{ secrets.AMZ_EU_SELLER_ID }}
