--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mws-client",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "an api wrapper for Amazon Marketplace Webservice API",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,11 @@
     "lint": "standard --fix",
     "coverage": "nyc npm test",
     "add-section": "node tools/section-generator.js"
+  },
+  "homepage": "https://github.com/kaskadi/mws-client",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaskadi/mws-client"
   },
   "keywords": [
     "mws",
