--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: generate-docs
+    if: github.repository != 'kaskadi/template-npm-pkg' # this is done to skip publish workflow if in template (because the package does not exist and therefore this would fail)
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
