Added TEST_SIGN_KEY environment variable

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
         MWS_KEY_ID: ${{ secrets.MWS_KEY_ID }}
         MWS_KEY_SECRET: ${{ secrets.MWS_KEY_SECRET }}
         AMZ_EU_SELLER_ID: ${{ secrets.AMZ_EU_SELLER_ID }}
+        TEST_SIGN_KEY: ${{ secrets.TEST_SIGN_KEY }}
     - name: Upload report to Code Climate
       uses: kaskadi/action-cc-reporter@master
       env:
