--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,7 @@ jobs:
         MWS_KEY_ID: ${{ secrets.MWS_KEY_ID }}
         MWS_KEY_SECRET: ${{ secrets.MWS_KEY_SECRET }}
         AMZ_EU_SELLER_ID: ${{ secrets.AMZ_EU_SELLER_ID }}
+        TEST_SIGN_KEY: ${{ secrets.TEST_SIGN_KEY }}
   generate-docs:
     runs-on: ubuntu-latest
     steps:
