Forcing matrix job to run in serie

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
         node: [10, 12]
     steps:
