--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,11 @@ jobs:
       uses: github/codeql-action/analyze@v1
   coverage:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1
-      matrix:
-        node: [10, 12]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node }}
+        node-version: 12
     - name: Install dependencies
       run: npm i
     - name: Generate coverage report
